--- a/src/com/eslint/settings/ESLintSettingsPage.form
+++ b/src/com/eslint/settings/ESLintSettingsPage.form
@@ -1,85 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.eslint.settings.ESLintSettingsPage">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="644" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
+      <component id="db737" class="javax.swing.JLabel" binding="pathToEslintBinLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Path to eslint &amp;bin"/>
+          <toolTipText value="This path should point to eslint node script."/>
+        </properties>
+      </component>
+      <vspacer id="4900b">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <grid id="93c07" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="bd58b" class="javax.swing.JRadioButton" binding="searchForEslintrcInRadioButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Let eslint &amp;search for .eslintrc up the folder tree"/>
+            </properties>
+          </component>
+          <component id="36405" class="javax.swing.JRadioButton" binding="useProjectEslintrcRadioButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="&amp;Use specific config file"/>
+            </properties>
+          </component>
+          <component id="c570c" class="com.intellij.ui.TextFieldWithHistoryWithBrowseButton" binding="eslintrcFile">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="3" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <component id="50a34" class="javax.swing.JLabel" binding="ESLintConfigFilePathLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="ESLint &amp;config file path"/>
+          <toolTipText value="Path to the file with the settings require.js, relatively public directory"/>
+        </properties>
+      </component>
+      <component id="9785f" class="com.intellij.ui.TextFieldWithHistoryWithBrowseButton" binding="eslintBinField2">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="a84b9" class="javax.swing.JLabel" binding="rulesDirectoryLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Rules directory"/>
+          <toolTipText value="Path to the custom rules directory"/>
+        </properties>
+      </component>
+      <component id="f1c1a" class="javax.swing.JTextField" binding="rulesPathField">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+        </properties>
+      </component>
       <component id="c4dd0" class="javax.swing.JCheckBox" binding="pluginEnabledCheckbox">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="&amp;Enable"/>
           <toolTipText value="To apply the settings, you must restart IDE"/>
         </properties>
       </component>
-      <component id="db737" class="javax.swing.JLabel">
+      <component id="5c02e" class="com.intellij.ui.HyperlinkLabel" binding="usageLink" custom-create="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="6bca8"/>
-          <text value="Path to &amp;eslint bin"/>
-          <toolTipText value="This path should point to eslint node script."/>
-        </properties>
-      </component>
-      <component id="6bca8" class="javax.swing.JTextField" binding="eslintBinField">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="d0ccf" class="javax.swing.JLabel">
+      <grid id="47b9b" binding="errorPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <component id="3eb3d" class="com.intellij.ui.TextFieldWithHistoryWithBrowseButton" binding="nodeInterpreterField">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="b32b7" class="javax.swing.JLabel" binding="nodeInterpreterLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="7c589"/>
-          <text value="ESLint &amp;config file path"/>
-          <toolTipText value="Path to the file with the settings require.js, relatively public directory"/>
+          <text value="&amp;Node interpreter"/>
+          <toolTipText value="This path should point to node interpeter file path."/>
         </properties>
       </component>
-      <component id="7c589" class="javax.swing.JTextField" binding="configFilePathField">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-        </properties>
-      </component>
-      <component id="f1c1a" class="javax.swing.JTextField" binding="rulesPathField">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-        </properties>
-      </component>
-      <component id="a84b9" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="7c589"/>
-          <text value="&amp;Rules directory"/>
-          <toolTipText value="Path to the custom rules directory"/>
-        </properties>
-      </component>
-      <vspacer id="4900b">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="eslintrcButtonGroup">
+      <member id="bd58b"/>
+      <member id="36405"/>
+    </group>
+  </buttonGroups>
 </form>
