--- a/src/com/eslint/settings/ESLintSettingsPage.form
+++ b/src/com/eslint/settings/ESLintSettingsPage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.eslint.settings.ESLintSettingsPage">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="644" height="400"/>
@@ -19,7 +19,7 @@
       </component>
       <vspacer id="4900b">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <grid id="93c07" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -75,11 +75,11 @@
         </constraints>
         <properties>
           <labelFor value="f1c1a"/>
-          <text value="&amp;Rules directory"/>
+          <text value="&amp;Custom Rules directory"/>
           <toolTipText value="Path to the custom rules directory"/>
         </properties>
       </component>
-      <component id="f1c1a" class="javax.swing.JTextField" binding="rulesPathField">
+      <component id="f1c1a" class="javax.swing.JTextField" binding="customRulesPathField">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -100,7 +100,7 @@
       </component>
       <grid id="47b9b" binding="errorPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -159,6 +159,23 @@
           </component>
         </children>
       </grid>
+      <component id="a7234" class="com.intellij.ui.TextFieldWithHistoryWithBrowseButton" binding="rulesPathField">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <toolTipText value="Set the built in rules directory for eslintrc support (optional)"/>
+        </properties>
+      </component>
+      <component id="f3be6" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Rules directory"/>
+          <toolTipText value="Path to the built-in eslint rules directory for eslint config support (optional)"/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
