--- a/src/com/eslint/settings/ESLintSettingsPage.form
+++ b/src/com/eslint/settings/ESLintSettingsPage.form
@@ -167,7 +167,7 @@
           <toolTipText value="Set the built in rules directory for eslintrc support (optional)"/>
         </properties>
       </component>
-      <component id="f3be6" class="javax.swing.JLabel">
+      <component id="f3be6" class="javax.swing.JLabel" binding="rulesDirectoryLabel1">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
