--- a/src/com/eslint/settings/ESLintSettingsPage.form
+++ b/src/com/eslint/settings/ESLintSettingsPage.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.eslint.settings.ESLintSettingsPage">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="644" height="400"/>
+      <xy x="20" y="20" width="644" height="447"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -19,7 +19,7 @@
       </component>
       <vspacer id="4900b">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <grid id="93c07" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -100,7 +100,7 @@
       </component>
       <grid id="47b9b" binding="errorPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -119,15 +119,6 @@
         <properties>
           <text value="&amp;Node interpreter"/>
           <toolTipText value="This path should point to node interpeter file path."/>
-        </properties>
-      </component>
-      <component id="7368b" class="javax.swing.JCheckBox" binding="treatAllEslintIssuesCheckBox" default-binding="true">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="&amp;Treat all eslint issues as warnings "/>
-          <toolTipText value="Ignore the severity in the eslintrc config of warnings and errors and treat all issues as warnings"/>
         </properties>
       </component>
       <grid id="64850" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -161,7 +152,7 @@
       </grid>
       <component id="a7234" class="com.intellij.ui.TextFieldWithHistoryWithBrowseButton" binding="rulesPathField">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <toolTipText value="Set the built in rules directory for eslintrc support (optional)"/>
@@ -169,7 +160,7 @@
       </component>
       <component id="f3be6" class="javax.swing.JLabel" binding="rulesDirectoryLabel1">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="&amp;Rules directory"/>
@@ -193,6 +184,34 @@
         </constraints>
         <properties>
           <enabled value="true"/>
+        </properties>
+      </component>
+      <component id="62de9" class="javax.swing.JCheckBox" binding="autoFixCheckbox">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Auto fix errors"/>
+          <toolTipText value="Auto fix errors"/>
+        </properties>
+      </component>
+      <component id="8430" class="javax.swing.JCheckBox" binding="reportUnusedCheckbox">
+        <constraints>
+          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="false"/>
+          <text value="Report unused eslint-disable directive"/>
+          <toolTipText value="Report unused eslint-disable directive"/>
+        </properties>
+      </component>
+      <component id="7368b" class="javax.swing.JCheckBox" binding="treatAllEslintIssuesCheckBox" default-binding="true">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Treat all eslint issues as warnings "/>
+          <toolTipText value="Ignore the severity in the eslintrc config of warnings and errors and treat all issues as warnings"/>
         </properties>
       </component>
     </children>
